gitops/k3han/manifests/canary-echo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-echo-public
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx-public"
    # 使用全域定義的 $canary_access 變數 (Token: 5566)
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($canary_access = "0") {
        access_log off;
        return 404;
      }
spec:
  rules:
    - host: "www.omh.idv.tw"
      http:
        paths:
          - path: /canary
            pathType: Prefix
            backend:
              service:
                name: canary-echo
                port:
                  number: 80
